--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AL-NOOR PUBLIC SCHOOL MANGLOUR</title>
+<title>AL-NOOR INTERNATIONAL SCHOOL | Manglour</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -13,103 +13,125 @@
 *{box-sizing:border-box;margin:0;padding:0}
 body{font-family:Poppins,sans-serif;background:var(--light);line-height:1.6}
 
-/* HEADER */
+/* ================= HEADER ================= */
 header{background:var(--green);position:sticky;top:0;z-index:999}
-nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:14px 20px;color:#fff}
-.logo{display:flex;align-items:center;gap:10px;font-weight:700}
-.logo img{height:45px}
-nav a{color:#fff;margin-left:15px;text-decoration:none;font-weight:500}
-
-/* HERO */
-.hero{
-min-height:85vh;
-background:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.6)),
-url("https://images.unsplash.com/photo-1588072432836-e10032774350") center/cover;
-display:flex;align-items:center;justify-content:center;
-text-align:center;color:#fff;padding:20px
+nav{
+  max-width:1200px;margin:auto;
+  display:flex;justify-content:space-between;
+  align-items:center;padding:14px 20px;color:#fff
 }
-.hero img{height:90px;margin-bottom:15px}
+
+.logo{display:flex;align-items:center;gap:12px}
+.logo img{height:55px}
+.logo-text{display:flex;flex-direction:column;line-height:1.1}
+.school-name{font-size:18px;font-weight:700;letter-spacing:1px}
+.school-place{font-size:13px;opacity:.9}
+
+nav a{
+  color:#fff;margin-left:15px;
+  text-decoration:none;font-weight:500
+}
+
+/* ================= HERO ================= */
+.hero{
+  min-height:85vh;
+  background:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.6)),
+  url("https://images.unsplash.com/photo-1588072432836-e10032774350") center/cover;
+  display:flex;align-items:center;justify-content:center;
+  text-align:center;color:#fff;padding:20px
+}
+.hero img{height:120px;margin-bottom:15px}
 .hero h1{font-size:42px}
 .hero p{max-width:800px;margin:auto;font-size:18px}
-.btn{display:inline-block;margin-top:20px;padding:14px 34px;background:var(--green);color:#fff;border-radius:6px;text-decoration:none}
+.btn{
+  display:inline-block;margin-top:20px;
+  padding:14px 34px;background:var(--green);
+  color:#fff;border-radius:6px;text-decoration:none
+}
 
-/* COMMON */
+/* ================= COMMON ================= */
 .container{max-width:1200px;margin:auto;padding:60px 20px}
 h2{text-align:center;color:var(--green);margin-bottom:20px}
 
-/* FEATURES */
+/* ================= FEATURES ================= */
 .features{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:20px
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:20px
 }
 .feature{
-background:#eaffea;padding:25px;border-radius:12px;
-text-align:center;border:1px solid #c8f5d4
+  background:#eaffea;padding:25px;border-radius:12px;
+  text-align:center;border:1px solid #c8f5d4
 }
 
-/* TEACHERS GRID */
+/* ================= TEACHERS ================= */
 .teacher-grid{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-gap:25px;margin-top:40px
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:25px;margin-top:40px
 }
 .card{
-background:#fff;padding:20px;border-radius:14px;
-box-shadow:0 6px 18px rgba(0,0,0,.08);
-text-align:center
+  background:#fff;padding:20px;border-radius:14px;
+  box-shadow:0 6px 18px rgba(0,0,0,.08);
+  text-align:center
 }
 .card img{
-width:120px;height:120px;border-radius:50%;
-object-fit:cover;margin-bottom:10px
+  width:120px;height:120px;border-radius:50%;
+  object-fit:cover;margin-bottom:10px
 }
 
-/* GALLERY */
+/* ================= GALLERY ================= */
 .gallery-grid{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-gap:20px;margin-top:30px
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:20px;margin-top:30px
 }
 .gallery-grid img{
-width:100%;border-radius:12px;
-object-fit:cover;transition:.3s
+  width:100%;border-radius:12px;
+  object-fit:cover;transition:.3s
 }
 .gallery-grid img:hover{transform:scale(1.04)}
 
-/* MODAL FORM */
+/* ================= MODAL FORM ================= */
 .modal{
-display:none;position:fixed;inset:0;
-background:rgba(0,0,0,.6);z-index:1000;
-align-items:center;justify-content:center
+  display:none;position:fixed;inset:0;
+  background:rgba(0,0,0,.6);z-index:1000;
+  align-items:center;justify-content:center
 }
 .modal-box{
-background:#fff;max-width:700px;width:90%;
-max-height:90vh;overflow-y:auto;
-padding:30px;border-radius:14px;position:relative
+  background:#fff;max-width:700px;width:90%;
+  max-height:90vh;overflow-y:auto;
+  padding:30px;border-radius:14px;position:relative
 }
-.close{position:absolute;top:10px;right:15px;font-size:26px;cursor:pointer}
+.close{
+  position:absolute;top:10px;right:15px;
+  font-size:26px;cursor:pointer
+}
 input,select,textarea{
-width:100%;padding:12px;margin:8px 0;
-border:1px solid #ccc;border-radius:6px
+  width:100%;padding:12px;margin:8px 0;
+  border:1px solid #ccc;border-radius:6px
 }
 
-/* FOOTER */
+/* ================= FOOTER ================= */
 footer{background:var(--green);color:#fff;padding:40px 20px}
 .footer-grid{
-max-width:1200px;margin:auto;
-display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:30px
+  max-width:1200px;margin:auto;
+  display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:30px
 }
 .social a{color:#fff;font-size:22px;margin-right:12px}
 .whatsapp{
-display:inline-block;margin-top:10px;
-padding:10px 18px;background:#25D366;
-color:#fff;border-radius:6px;text-decoration:none
+  display:inline-block;margin-top:10px;
+  padding:10px 18px;background:#25D366;
+  color:#fff;border-radius:6px;text-decoration:none
 }
 
+/* ================= MOBILE ================= */
 @media(max-width:768px){
-.hero h1{font-size:30px}
-.hero p{font-size:16px}
+  .hero h1{font-size:30px}
+  .hero p{font-size:16px}
+  .logo img{height:45px}
+  .school-name{font-size:15px}
 }
 </style>
 </head>
@@ -119,9 +141,13 @@ color:#fff;border-radius:6px;text-decoration:none
 <header>
 <nav>
 <div class="logo">
-<img src="logo.png">
-AL-NOOR PUBLIC SCHOOL
+  <img src="logo.png">
+  <div class="logo-text">
+    <span class="school-name">AL-NOOR INTERNATIONAL SCHOOL</span>
+    <span class="school-place">Manglour</span>
+  </div>
 </div>
+
 <div>
 <a href="#home">Home</a>
 <a href="#about">About</a>
@@ -135,8 +161,8 @@ AL-NOOR PUBLIC SCHOOL
 <section class="hero" id="home">
 <div>
 <img src="logo.png">
-<h1>Welcome to Al-Noor Public School Manglour</h1>
-<p>Shaping young minds with quality education, discipline & moral values.</p>
+<h1>Welcome to Al-Noor International School</h1>
+<p>Knowledge • Faith • Success</p>
 <a class="btn" onclick="openForm()">Apply for Admission</a>
 </div>
 </section>
@@ -144,23 +170,23 @@ AL-NOOR PUBLIC SCHOOL
 <section class="container" id="about">
 <h2>About Us</h2>
 <p style="text-align:center;max-width:900px;margin:auto">
-Al-Noor Public School Manglour provides quality education from Nursery to Class 10 in a safe and disciplined environment.
+Providing quality education from Nursery to Class 10 with discipline, moral values and academic excellence.
 </p>
 </section>
 
 <section class="container">
 <h2>Why Choose Us</h2>
 <div class="features">
-<div class="feature">📘 Excellence in Academics</div>
-<div class="feature">🏫 Safe & Secure Campus</div>
+<div class="feature">📘 Strong Academics</div>
+<div class="feature">🏫 Safe & Disciplined Campus</div>
 <div class="feature">🎓 Nursery to Class 10</div>
 </div>
 </section>
 
 <section class="container" id="teachers">
 <h2>Meet Our Teachers</h2>
-
 <div class="teacher-grid">
+
 <div class="card">
 <img src="IMG-20231224-WA0013.jpg">
 <h4>Nuzhat Saifi</h4>
@@ -178,6 +204,7 @@ Al-Noor Public School Manglour provides quality education from Nursery to Class 
 <h4>Mohd Shahzad</h4>
 <p><strong>Manager</strong><br>10 Years Experience</p>
 </div>
+
 </div>
 </section>
 
@@ -215,7 +242,7 @@ Al-Noor Public School Manglour provides quality education from Nursery to Class 
 </div>
 
 <p style="text-align:center;margin-top:30px">
-© 2025 AL-NOOR PUBLIC SCHOOL MANGLOUR
+© 2025 AL-NOOR INTERNATIONAL SCHOOL MANGLOUR
 </p>
 </footer>
 
